--- a/ChatApp/ChatApp/Configs/Plits/Info.plist
+++ b/ChatApp/ChatApp/Configs/Plits/Info.plist
@@ -1,5 +1,30 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
-<dict/>
+<dict>
+    <key>NSCameraUsageDescription</key>
+    <string>Hello</string>
+    <key>NSPhotoLibraryUsageDescription</key>
+    <string>Hello</string>
+    <key>CFBundleURLTypes</key>
+    <array>
+        <dict>
+            <key>CFBundleURLSchemes</key>
+            <array>
+                <string>fb1007281956961647</string>
+            </array>
+        </dict>
+    </array>
+    <key>FacebookAppID</key>
+    <string>1007281956961647</string>
+    <key>FacebookClientToken</key>
+    <string>f036092157ca790289ad5fb546a65765</string>
+    <key>FacebookDisplayName</key>
+    <string>ChatApp</string>
+    <key>LSApplicationQueriesSchemes</key>
+    <array>
+        <string>fbapi</string>
+        <string>fb-messenger-share-api</string>
+    </array>
+</dict>
 </plist>
