--- a/ChatApp/Podfile
+++ b/ChatApp/Podfile
@@ -13,6 +13,24 @@ target 'ChatApp' do
   # Comment the next line if you don't want to use dynamic frameworks
   use_frameworks!
 
-  # Pods for ChatApp
+  pod 'MessageKit'
+  pod 'SDWebImage'
+  
+  #UI
+  pod 'IQKeyboardManager'
+  pod 'JGProgressHUD'
+  
+  #DB
+  pod 'FirebaseAuth' , '10.8.0'
+  pod 'FirebaseDatabase' ,'10.8.0'
+  pod 'FirebaseStorage' , '10.8.0'
+  pod 'RealmSwift', '10.38.3'
+
+  
+  #Facebook
+  pod 'FBSDKLoginKit', '12.0.2'
+  
+  #Google
+  pod 'GoogleSignIn'
 
 end
